src/NKnife.TDMS/Externals/nilibddc.h

   typedef DDCFile*               DDCFileHandle;
   typedef DDCChannelGroup*         DDCChannelGroupHandle;
   typedef DDCChannel*               DDCChannelHandle;
   typedef enum {
      DDC_UInt8 = 5,   // unsigned char
      DDC_Int16 = 2,   // short
      DDC_Int32 = 3,   // int
      DDC_Float = 9,   // float
      DDC_Double = 10,   // double
      DDC_String = 23,   // string
      DDC_Timestamp = 30,   // timestamp (Year/Month/Day/Hour/Minute/Second/Millisecond components)
   } DDCDataType;
   //*****************************************************************************
   /// -> Object Management
   //*****************************************************************************
   int __stdcall DDC_CreateFile(const char *filePath,
      const char *fileType,
      const char *name,
      const char *description,
      const char *title,
      const char *author,
      DDCFileHandle *file);
   int __stdcall DDC_AddChannelGroup(DDCFileHandle file,
      const char *name,
      const char *description,
      DDCChannelGroupHandle *channelGroup);
   int __stdcall DDC_AddChannel(DDCChannelGroupHandle channelGroup,
      DDCDataType dataType,
      const char *name,
      const char *description,
      const char *unitString,
      DDCChannelHandle *channel);
   int __stdcall DDC_SaveFile(DDCFileHandle file);
   int __stdcall DDC_CloseFile(DDCFileHandle file);
   int __stdcall DDC_OpenFileEx(const char *filePath,
      const char *fileType,
      int readOnly,
      DDCFileHandle *file);